to default chatgpt
restore to chatgpt default

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "testing in progress"
-description: "testing in progress"
+title: "Dermawan — DIY × Process"
+description: "DIY builds and system-thinking write-ups"
 theme: minima            # built-in GitHub Pages theme
 url: "https://dermawan.net"
 markdown: kramdown
